fix(membership-fees): address code review issues — add GET rule endpoint, fix HATEOAS affordances, rename stale variables
Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>